Fix bug 1435258: Keep dir-based alignement in diff view (#837)

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1210,7 +1210,8 @@ body > header aside p {
 #editor p#original,
 #editor p.original,
 #ftl-original .main-value li,
-#editor p.translation {
+#editor p.translation,
+#editor p.translation-diff {
   text-align: start;
   white-space: pre-wrap;
 }
